sprint2 server activities + separation of users by role

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity android:name=".ui.admin.UserListActivity" android:exported="false" />
         <activity android:name=".ui.admin.SecurityLogsActivity" android:exported="false" />
 
+
+        <activity android:name=".ui.common.DashboardActivity" android:exported="false" />
+
     </application>
 
 </manifest>
